<resources>
    <string name="app_name">广工新闻</string>
    <string name="action_settings">Settings</string>
    <string name="isLoading">正在加载中...</string>
    <string name="newsDetails">新闻详情</string>
    <string name="search">搜索</string>
    <string name="share">分享</string>
    <string name="setting">设置</string>
    <string name="help">帮助</string>
    <string name="advice">建议</string>
    <string name="title_activity_postbar_details">贴吧</string>
    <string name="LogoString">聚焦广工</string>
    <string name="title_activity_login">Sign in</string>
    <string name="skip">跳过</string>
    <string name="ok">确定</string>
    <string name="collection">收藏</string>
    <string name="about_me">这是一个广工新闻的定制APP，由于WWZZW团队出品欢迎体验</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
